<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ActivityAcao1">

    <EditText
        android:id="@+id/editTextAction1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/insira_algo"
        android:textAlignment="center"
        android:textSize="25dp" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar" />
    </LinearLayout>
